Fixed responsive on small screens

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,7 +82,7 @@ input {
 }
 
 @media only screen and (max-width: 600px) {
-  h1 {
+  .sm-h1 {
     text-align: center !important;
   }
   .quote {
